Tue Aug 29 18:07:39 UTC 2006  Ossama Othman  <ossama_othman at symantec dot com>

        * examples/IPC_SAP/SSL_SAP/SSL_SAP.mpc:
        * tests/SSL/tests.mpc:

          Disable MPC projects in these files that depend on features not
          found in the "ACE for TAO" subset", i.e. ACE_Profile_Timer and
          asynch I/O.

Tue Aug 29 13:19:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_orb_tests.lst:
          Added bug 2560 regression. It runs fine on windows but seem to
          crash on linux exhibiting a bug that isn't fixed yet.

Tue Aug 29 13:17:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/PerlACE/ProcessVX.pm:
          Commented out the ProcessVX_Unix require, it resulted in
          errors on test systems when they don't have Net::Telnet ()
          available.

Tue Aug 29 11:16:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/PerlACE/Run_Test.pm:
        * bin/PerlACE/ProcessVX_Unix.pm:
        * tests/run_test.pl:
          Changes for running tests on linux with vxworks 6.3 rtp model target

Tue Aug 29 08:20:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/run_test.lst:
          Don't run UUIDTest in ACE_FOR_TAO configuration

        * bin/ace-tests.lst:
          Don't run wfmo reactor tests in ACE_FOR_TAO configuration

Tue Aug 29 00:24:48 UTC 2006  Adam Mitz  <mitza@ociweb.com>

        * docs/run_test.txt:
          Fixed Perl bug in example (needed "" instead of '' to get $ variable
          expansion) and added explanatory text on using $PerlACE::ACE_ROOT
          and $PerlACE::TAO_ROOT.

Tue Aug 29 00:26:56 UTC 2006  Ossama Othman  <ossama_othman at symantec dot com>

        * ace/SSL/ssl.mpc
        * ace/SSL/ssl_for_tao.mpc
        * bin/MakeProjectCreator/config/ssl_full.mpb:
        * bin/MakeProjectCreator/config/ssl.mpb:
        * bin/MakeProjectCreator/config/ssl_for_tao.mpb:
